prevent flickering when showing loading

--- a/plugins/monitoring/app/assets/stylesheets/monitoring/_application.scss
+++ b/plugins/monitoring/app/assets/stylesheets/monitoring/_application.scss
@@ -35,11 +35,9 @@
   margin-top:4px;
 }
 
-.loading {
-  display:none;
+.loading_place {
+  display: inline-block !important;
+  width:7px !important;
 }
 
-.visible {
-  display:inline;
-}
 
